k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
